[package]
name = "kennzd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
# fix for CVE-2024-27308 - remove when rocket/tokio brings a version >= 0.8.11
mio = "0.8.11"

[dependencies.rocket_dyn_templates]
version = "=0.1.0"
features = ["handlebars"]
